# dmps

./: .coverage  .gitignore  .pre-commit-config.yaml  AI_AGENT_ANALYSIS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  DIFFERENTIATION_ANALYSIS.md  ENHANCEMENT_SYSTEM.md  FIRST_PRINCIPLES_FOUNDATION.md  IDEA_EVALUATION_TEMPLATE.md  MANIFEST.in  PERFORMANCE.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SECURITY_FIXES.md  SHARK_TANK_FILTER.md  TECHNICAL_DEBT.md  build_package.py  pyproject.toml  pyrightconfig.json  quality_assurance.py  requirements.txt  setup-dev.py  setup.cfg  setup_new.py  test_ci_trigger.txt  test_dmps.py
.amazonq/rules/: Hard_Right_Over_Easy_Wrong.md  No_unicode_characters.md  Optional_dependencies.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog.yml  ci.yml  code-quality.yml  minimal-ci.yml  publish.yml  release.yml  security-audit.yml  security-monitor.yml
docs/: API_REFERENCE.md  LLM_INTEGRATION.md  SECURITY_GUIDE.md  TROUBLESHOOTING.md
scripts/: format-check.py  format.py
src/dmps/: __init__.py  cache.py  cli.py  config.py  engine.py  error_handler.py  evaluation.py  formatters.py  huggingface_client.py  intent.py  llm_client.py  observability.py  optimizer.py  profiler.py  rbac.py  repl.py  security.py  techniques.py  threat_model.py  token_tracker.py  types.py  validation.py
